Bug 125871 - LO63b1: new Tip of the Day window has empty area selected
Summary: LO63b1: new Tip of the Day window has empty area selected
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.3.0.0.beta1+
Hardware: All All
: medium trivial
Assignee: Heiko Tietze
URL:
Whiteboard: target:6.4.0 target:6.3.0.2
Keywords:
: 125391 125529 (view as bug list)
Depends on:
Blocks: Tip-Of-The-Day
  Show dependency treegraph
 
Reported: 2019-06-12 07:36 UTC by Martin Srebotnjak
Modified: 2019-09-06 07:12 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Tip of the Day screenshot (292.96 KB, image/png)
2019-06-12 07:37 UTC, Martin Srebotnjak
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Srebotnjak 2019-06-12 07:36:42 UTC
Description:
When the new tooltip window opens on macOS there is a rectangle in it selected that does not make any sense. See attached screenshot.

BTW, all the text except for the bottom button bar is centered in the text area right of the bulb icon. However, the button bar is centered on the dialog width. This creates a clear mismatch in alignment and creates an unpleasant UX. Either the text above the button bar should be aligned left (to the bulb icon) or the button bar should start and be centrally aligned from the bulb icon right border (probably with reordering the check button somewehere else in the dialog).

Steps to Reproduce:
1. Open LibreOffice and one of its modules.
2.
3.

Actual Results:
See the screenshot attached.

Expected Results:
The area should not be selected.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Martin Srebotnjak 2019-06-12 07:37:39 UTC
Created attachment 152121 [details]
Tip of the Day screenshot

See the rectangle for yourself.
Comment 2 Julien Nabet 2019-06-12 09:59:53 UTC
On Win10 with master sources updated today, I could reproduce this.
=> confirming.

I noticed that:
86      else
87      {
88          m_pLink->set_uri("");
89          m_pLink->set_label(CuiResId(STR_HELP_LINK));
90          m_pLink->set_visible(true);
91          //converts aLink into the proper offline/online hyperlink
92          m_pLink->connect_clicked(LINK(this, TipOfTheDayDialog, OnLinkClick));
93      }
(see https://opengrok.libreoffice.org/xref/core/cui/source/dialogs/tipofthedaydlg.cxx?r=d1d44e1d#88)
Heiko: should STR_HELP_LINK be removed? If not, any thoughts?
Comment 3 Heiko Tietze 2019-06-12 10:10:46 UTC
Looked good on Linux, *grmpf*. We should explicitely set the focus on the Close button since the (hidden) link to the local help is needed (of course we could dispose and recreate too).
Comment 4 Heiko Tietze 2019-07-16 08:23:43 UTC
Please verify or reopen.
Comment 5 Commit Notification 2019-07-16 08:24:17 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/fdd826eefd0f184fd832582237a8ccdae3572f48%5E%21

tdf#125871 - new Tooltip window has empty area selected

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2019-07-18 17:23:42 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/875ec40359b409f1dfb9cfbdf7085de1257226fb%5E%21

tdf#125871 - new Tooltip window has empty area selected

It will be available in 6.3.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Heiko Tietze 2019-09-06 06:58:54 UTC
*** Bug 125529 has been marked as a duplicate of this bug. ***
Comment 8 Heiko Tietze 2019-09-06 07:12:09 UTC
*** Bug 125391 has been marked as a duplicate of this bug. ***