tdf#125871 - new Tooltip window has empty area selected

Ok button focused by default

Change-Id: Ibe7653c09dd9f76d6b9feda295b92c90a4b26058